--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 	<link rel="shortcut icon" id="favicon" href="images/favicon.png">
 	<meta name="author" content="Arlène Botokro, Mathilda Di Matteo, Marine Hévin and Florent Votte">
 
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Pacifico:400' rel='stylesheet' type='text/css'>
+	<link href='css/open.css' rel='stylesheet' type='text/css'>
+	<link href='css/pacifico.css' rel='stylesheet' type='text/css'>
 	<script type="text/javascript" src="js/jquery-1.9.1.js"></script>
   <script type="text/javascript" src="js/jquery.onepage-scroll.js"></script>
   <link href='css/onepage-scroll.css' rel='stylesheet' type='text/css'>
