--- a/public/index.html
+++ b/public/index.html
@@ -455,6 +455,22 @@
                               title: {
                                   display: false,
                                   text: 'Migrants'
+                              },
+                              scales: {
+                                  xAxes: [{
+                                      display: true,
+                                      scaleLabel: {
+                                          display: true,
+                                          labelString: 'Date'
+                                      }
+                                  }],
+                                  yAxes: [{
+                                      display: true,
+                                      scaleLabel: {
+                                          display: true,
+                                          labelString: 'Nb dead and missing'
+                                      }
+                                  }]
                               }
                           }
                       });
