--- a/public/index.html
+++ b/public/index.html
@@ -275,7 +275,7 @@
 
     }
     .main section.page2 {
-      background: rgba(159, 42, 62, 0.44);
+      background: rgb(52, 52, 52);
 
     }
 
@@ -419,8 +419,8 @@
                           "July 2017", "August 2017", "September 2017", "October 2017", "November 2017"],
                       datasets: [{
                           label: 'number of dead and missing',
-                          backgroundColor: color(window.chartColors.red).alpha(0.5).rgbString(),
-                          borderColor: window.chartColors.red,
+                          backgroundColor: color(window.chartColors.black).alpha(0.7).rgbString(),
+                          borderColor: window.chartColors.cyan,
                           borderWidth: 1,
                           data: [96, 209, 1001, 794, 902, 402, 459, 98, 321, 58, 27,
                               702, 242,700, 452, 879, 297, 179, 345, 1309, 554, 413, 209,
@@ -433,9 +433,9 @@
                       labels: ["January 2014"],
                       datasets: [{
                           label: 'number of dead and missing',
-                          backgroundColor: color(window.chartColors.red).alpha(0.5).rgbString(),
-                          borderColor: window.chartColors.red,
-                          borderWidth: 1,
+                          backgroundColor: color("#181661").alpha(0.6).rgbString(),
+                          borderColor: color("#181661").alpha(0.6).rgbString(),
+                          borderWidth: 2,
                           data: [918]
                       }]
 
