meta donnee changement, titre de la page :D

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Background video - fullPage.js</title>
-    <meta name="author" content="Alvaro Trigo Lopez" />
-    <meta name="description" content="fullPage full-screen backgrounds." />
-    <meta name="keywords"  content="fullpage,jquery,demo,screen,fullscreen,backgrounds,full-screen" />
+    <title>Migrants Project</title>
+    <meta name="author" content="Arlène Botokro, Mathilda Di Matteo, Marine Hévin and Florent Votte" />
+    <meta name="description" content="Data vizualisation of migration" />
+    <meta name="keywords"  content="data vizu, data vizualisation, Télécom, ParisTech, Télécom ParisTech, Migrants, migrants, migration" />
     <meta name="Resource-type" content="Document" />
     <script src="js/Chart.bundle.js"></script>
     <script src="js/utils.js"></script>
