rajout d'un icon

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Data vizualisation of migration" />
     <meta name="keywords"  content="data vizu, data vizualisation, Télécom, ParisTech, Télécom ParisTech, Migrants, migrants, migration" />
     <meta name="Resource-type" content="Document" />
+    <link rel="icon" href="images/favicon.ico" />
     <script src="js/Chart.bundle.js"></script>
     <script src="js/utils.js"></script>
 
