--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,13 @@
             transform: translate3d(0,0,0);
         }
 
-
+        #section2 .text {
+            margin-left: 10%;
+            margin-right: 10%;
+        }
+        #section2 p {
+            text-align: left;
+        }
 
         /* Layer with position absolute in order to have it over the video
         * --------------------------------------- */
@@ -146,6 +152,30 @@
         video::-webkit-media-controls {
             display:none !important;
         }
+
+        a span{
+            display:none;
+            color:#fff;
+            background:rgba(51,51,51,0.75);
+            text-align:center;
+            position: absolute;
+            width: 100%;
+            left: 0;
+            top: 10%;
+            -webkit-transform: translate3d(0,0,0);
+            -ms-transform: translate3d(0,0,0);
+            transform: translate3d(0,0,0);
+            z-index:10;
+        }
+        a {
+            display: inline-block;
+            font-style: italic;
+        }
+        a:hover span{
+            display:block;
+        }
+
+
 
     </style>
 
@@ -254,7 +284,33 @@
     </div>
 
     <div class="section" id="section2">
-        <h1>Lovely images <br />for a lovely page</h1>
+        <div class="text">
+            <h2>Their journey was a migration</h2>
+            <br>
+            <p>
+                <b>Migrant</b>  - IOM defines a migrant as any person who is moving or has moved across an international border or within:
+            </p> <br>
+            <p>
+                -  a State away from his/her habitual place of residence, regardless of the person’s legal status.  <br>
+            </p>
+            <p>
+                -  whether the movement is voluntary or involuntary. <br>
+            </p>
+            <p>
+                -  what the causes for the movement are; or what the length of the stay is. <br>
+            </p>
+            <p>
+                -  it includes migration of <a>refugees
+                <span>According to UNHCR A refugee is someone who has been forced to flee his or her country because of persecution, war, or violence. A refugee has a well-founded fear of persecution for reasons of race, religion, nationality, political opinion or membership in a particular social group. Most likely, they cannot return home or are afraid to do so. War and ethnic, tribal and religious violence are leading causes of refugees fleeing their countries. More than half of all refugees worldwide come from just three countries: Syria, Afghanistan and South Sudan. Refugees benefit from a status, defined by several conventions and protocols, including the Geneva Convention.</span>
+            </a>, <a>displaced persons<span>According to UNHCR People forced to flee their homes but never cross an international border. These individuals are known as Internally Displaced Persons, or IDPs. These individuals seek safety anywhere they can find it—in nearby towns, schools, settlements, internal camps, even forests and fields. IDPs, which include people displaced by internal strife and natural disasters, are the largest group that UNHCR assists. Unlike refugees, IDPs are not protected by international law or eligible to receive many types of aid because they are legally under the protection of their own government. Countries with some the largest internally displaced populations are Colombia, Iraq and South Sudan.</span></a>,
+                <a>economic migrants<span>This term is not a legal classification but can design people that move from a country to another for economic and professional reasons</span></a>,
+                <a>asylum seekers<span>According to UNHCR When people flee their own country and seek sanctuary in another country, they apply for asylum – the right to be recognized as a refugee and receive legal protection and material assistance. An asylum seeker must demonstrate that his or her fear of persecution in his or her home country is well-founded. </span></a>
+                and persons moving for other purposes, including family reunification.
+            </p>
+
+        </div>
+
+
     </div>
 
     <div class="section" id="section3">
