--- a/public/index.html
+++ b/public/index.html
@@ -153,7 +153,7 @@
             display:none !important;
         }
 
-        a span{
+        .text a span{
             display:none;
             color:#fff;
             background:rgba(51,51,51,0.75);
@@ -167,11 +167,11 @@
             transform: translate3d(0,0,0);
             z-index:10;
         }
-        a {
+        .text a {
             display: inline-block;
             font-style: italic;
         }
-        a:hover span{
+        .text a:hover span{
             display:block;
         }
 
@@ -205,7 +205,7 @@
 
 
                 anchors:['0','1', '2', '3', '4','5', '6', '7', '8', '9', '10', '11', '12', '13', '14','15', '16', '17'],
-                sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE',
+                sectionsColor: ['#7BAABE', '#7BAABE', '#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE',
                     '#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE'],
             });
         });
@@ -227,7 +227,7 @@
 
     <div class="section" id="section1">
         <div id="titre1" class="layer">
-            <h1>This is  a GTGBBHHUIJ (adjectif?) family</h1>
+            <h3>This is  a GTGBBHHUIJ (adjectif?) family</h3>
         </div>
         <img id="family" src="images/family.png" alt="family" class="image">
         <div id="titre2" class="layer">
@@ -242,7 +242,7 @@
         <script>
             var index = 0;
 
-            document.getElementById("titre1").style.visibility = 'hidden';
+
             document.getElementById("titre1").style.zIndex = '1';
             document.getElementById("titre2").style.visibility = 'hidden';
             document.getElementById("titre2").style.zIndex = '2';
@@ -256,12 +256,12 @@
                         console.log("index = 0");
                         document.getElementById("titre1").style.visibility = 'visible';
                     }
-                    else if (index ==6){
+                    else if (index ==10){
                         console.log("index = 1");
                         document.getElementById("titre2").style.visibility = 'visible';
                         document.getElementById("titre1").style.visibility = 'hidden';
                     }
-                    else if (index ==12){
+                    else if (index ==20){
                         console.log("index = 2");
                         document.getElementById("titre3").style.visibility = 'visible';
                         document.getElementById("titre2").style.visibility = 'hidden';
@@ -272,7 +272,7 @@
                     index ++;
 
                 }
-                else if (index > 20){
+                else if (index > 50){
 
                     clearInterval(annim);
 
