--- a/public/index.html
+++ b/public/index.html
@@ -242,11 +242,11 @@
 
     <div class="section" id="section1">
         <div id="titre1" class="layer">
-            <h3>This is  a GTGBBHHUIJ (adjectif?) family</h3>
+            <h3>This is a family</h3>
         </div>
         <img id="family" src="images/family.png" alt="family" class="image">
         <div id="titre2" class="layer">
-            <h3>They went on a journey</h3>
+            <h3>They went on a journey !</h3>
         </div>
         <div id="titre3" class="layer">
             <h3>But 2 people were missing</h3>
@@ -293,7 +293,7 @@
                     clearInterval(annim);
                 }
 
-            }, 500);
+            }, 400);
 
 
 
