--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
     <script src="js/Chart.bundle.js"></script>
     <script src="js/utils.js"></script>
 
-
+    <link rel="stylesheet" href="css/ammap.css" type="text/css">
+    <script src="js/ammap.js" type="text/javascript"></script>
+    <script src="js/worldLow.js" type="text/javascript"></script>
 
     <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
     <link rel="stylesheet" type="text/css" href="css/examples.css" />
@@ -184,6 +186,23 @@
             left: 10%;
             width: 80%;
         }
+        .maps {
+            position: absolute;
+            top: 20%;
+            left: 0px;
+            width: 100%;
+        }
+
+        .text_up_to_maps {
+            position: absolute;
+            top: 0%;
+            height: 20%;
+            width: 100%;
+        }
+        .text_up_to_maps h1 {
+            text-align:center;
+            padding: 5%;
+        }
 
 
 
@@ -219,8 +238,8 @@
 
 
                 anchors:['0','1', '2', '3', '4','5', '6', '7', '8', '9', '10', '11', '12', '13', '14','15', '16', '17'],
-                sectionsColor: ['#7BAABE', '#7BAABE', '#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE',
-                    '#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE','#7BAABE'],
+                sectionsColor: ['#54788b', '#7BAABE', '#54788b','#7BAABE','#54788b','#7BAABE','#54788b','#7BAABE','#54788b','#7BAABE',
+                    '#54788b','#7BAABE','#54788b','#7BAABE','#54788b','#7BAABE','#54788b','#7BAABE'],
 
             });
         });
@@ -257,30 +276,21 @@
         <script>
             var index = 0;
 
-
-            document.getElementById("titre1").style.zIndex = '1';
             document.getElementById("titre2").style.visibility = 'hidden';
-            document.getElementById("titre2").style.zIndex = '2';
             document.getElementById("titre3").style.visibility = 'hidden';
-            document.getElementById("titre3").style.zIndex = '3';
             document.getElementById("missing").style.visibility = 'hidden';
 
-
-            var annim = window.setInterval(function(){
+            window.setInterval(function(){
 
                 if ((window.location.hash==="#1")){
                     if (index==0){
                         $.fn.fullpage.setMouseWheelScrolling(false);
-                        console.log("index = 0");
-                        document.getElementById("titre1").style.visibility = 'visible';
                     }
                     else if (index ==8){
-                        console.log("index = 1");
                         document.getElementById("titre2").style.visibility = 'visible';
                         document.getElementById("titre1").style.visibility = 'hidden';
                     }
                     else if (index ==20){
-                        console.log("index = 2");
                         document.getElementById("titre3").style.visibility = 'visible';
                         document.getElementById("titre2").style.visibility = 'hidden';
                         document.getElementById("family").style.visibility = 'hidden';
@@ -289,14 +299,7 @@
                     }
                     index ++;
                 }
-                else {
-                    clearInterval(annim);
-                }
-
             }, 400);
-
-
-
         </script>
 
 
@@ -350,8 +353,6 @@
         <div class="graph">
             <canvas id="canvas"></canvas>
         </div>
-
-
         <script>
             var color = Chart.helpers.color;
             var dataArray = {
@@ -479,7 +480,151 @@
     </div>
 
     <div class="section" id="section8">
-        <h1>Maps </h1>
+        <div class="text_up_to_maps">
+            <h2>Main route of migration</h2>
+        </div>
+        <script>
+            var map;
+
+            // svg path for target icon
+            var targetSVG = "M9,0C4.029,0,0,4.029,0,9s4.029,9,9,9s9-4.029,9-9S13.971,0,9,0z M9,15.93 c-3.83,0-6.93-3.1-6.93-6.93S5.17,2.07,9,2.07s6.93,3.1,6.93,6.93S12.83,15.93,9,15.93 M12.5,9c0,1.933-1.567,3.5-3.5,3.5S5.5,10.933,5.5,9S7.067,5.5,9,5.5 S12.5,7.067,12.5,9z";
+            // svg path for plane icon
+            var planeSVG = "M19.671,8.11l-2.777,2.777l-3.837-0.861c0.362-0.505,0.916-1.683,0.464-2.135c-0.518-0.517-1.979,0.278-2.305,0.604l-0.913,0.913L7.614,8.804l-2.021,2.021l2.232,1.061l-0.082,0.082l1.701,1.701l0.688-0.687l3.164,1.504L9.571,18.21H6.413l-1.137,1.138l3.6,0.948l1.83,1.83l0.947,3.598l1.137-1.137V21.43l3.725-3.725l1.504,3.164l-0.687,0.687l1.702,1.701l0.081-0.081l1.062,2.231l2.02-2.02l-0.604-2.689l0.912-0.912c0.326-0.326,1.121-1.789,0.604-2.306c-0.452-0.452-1.63,0.101-2.135,0.464l-0.861-3.838l2.777-2.777c0.947-0.947,3.599-4.862,2.62-5.839C24.533,4.512,20.618,7.163,19.671,8.11z";
+
+            AmCharts.ready(function() {
+                map = new AmCharts.AmMap();
+
+
+                var dataProvider = {
+                    mapVar: AmCharts.maps.worldLow
+                };
+
+                map.areasSettings = {
+                    unlistedAreasColor: "#181661"
+                };
+
+                map.imagesSettings = {
+                    color: "#00ff11",
+                    rollOverColor: "#CC0000",
+                    selectedColor: "#000000"
+                };
+
+                map.linesSettings = {
+                    color: "#CC0000",
+                    alpha: 0.4
+                };
+
+
+
+                // cities
+                var cities = [
+                    {
+                        svgPath: targetSVG,
+                        title: 'Calais to United Kingdom\n48 missing or dead',
+                        latitude: '51.032000',
+                        longitude: '1.530730'
+                    },
+                    {
+                        svgPath: targetSVG,
+                        title: 'Caribbean to Central America\n21 missing or dead',
+                        latitude: '17.174251',
+                        longitude: '-81.026943'
+                    },
+                    {
+                        svgPath: targetSVG,
+                        title: 'Central America to US\n5 missing or dead',
+                        latitude: '29.272748',
+                        longitude: '-103.450158'
+                    },
+                    {
+                        svgPath: targetSVG,
+                        title: 'Central Mediterranean\n13 010 missing or dead',
+                        latitude: '35.491936',
+                        longitude: '12.631581'
+                    },
+                    {
+                        svgPath: targetSVG,
+                        title: 'Darien Gap\n27 missing or dead',
+                        latitude: '8.241309',
+                        longitude: '-78.002143'
+                    },
+                    {
+                        svgPath: targetSVG,
+                        title: 'Dominican Republic to Puerto Rico\n13 missing or dead',
+                        latitude: '18.434013',
+                        longitude: '-67.803684'
+                    },
+                    {
+                        svgPath: targetSVG,
+                        title: 'From Haiti to Dajabon, Dominican Republic\n1 missing or dead',
+                        latitude: '19.545011',
+                        longitude: ' -71.712446'
+                    },
+                    {
+                        svgPath: targetSVG,
+                        title: 'Horn Africa to Yemen\n162 missing or dead',
+                        latitude: '12.380538',
+                        longitude: '47.184514'
+                    },
+                    {
+                        svgPath: targetSVG,
+                        title: 'Eastern Mediterranean\n1 355 missing or dead',
+                        latitude: '41.026918',
+                        longitude: '29.001027'
+                    },
+                    {
+                        svgPath: targetSVG,
+                        title: 'Italy to France\n5 missing or dead',
+                        latitude: '43.785800',
+                        longitude: '7.529638'
+                    },
+                    {
+                        svgPath: targetSVG,
+                        title: 'Malaysia to Indonesia\n13 missing or dead',
+                        latitude: '2.055232',
+                        longitude: '101.981302'
+                    },
+                    {
+                        svgPath: targetSVG,
+                        title: 'Venezuela to Cura\xed_ao\n5 missing or dead',
+                        latitude: '11.969524',
+                        longitude: '-69.169640'
+                    },
+                    {
+                        svgPath: targetSVG,
+                        title: 'Western African\n114 missing or dead',
+                        latitude: '16.712979',
+                        longitude: '-11.872593',
+                    },
+                    {
+                        svgPath: targetSVG,
+                        title: 'Western Mediterranean\n439 missing or dead',
+                        latitude: '35.955730',
+                        longitude: '-5.501304'
+                    },
+                    {
+                        svgPath: targetSVG,
+                        title: 'Western Balkans\n71 missing or dead',
+                        latitude: '43.280480',
+                        longitude: '19.176704'
+                    }
+                ];
+
+
+
+
+                //dataProvider.linkToObject = london;
+                dataProvider.images = cities;
+                map.dataProvider = dataProvider;
+                map.backgroundZoomsToTop = true;
+                map.linesAboveImages = true;
+                map.write("mapdiv");
+
+            });
+
+        </script>
+
+        <div id="mapdiv" class="maps" style="height: 80%;"></div>
 
 
     </div>
