--- a/public/index.html
+++ b/public/index.html
@@ -520,91 +520,91 @@
                 var cities = [
                     {
                         svgPath: targetSVG,
-                        title: 'Calais to United Kingdom\n48 missing or dead',
+                        title: 'Calais to United Kingdom\n\r48 missing or dead',
                         latitude: '51.032000',
                         longitude: '1.530730'
                     },
                     {
                         svgPath: targetSVG,
-                        title: 'Caribbean to Central America\n21 missing or dead',
+                        title: 'Caribbean to Central America\n\r21 missing or dead',
                         latitude: '17.174251',
                         longitude: '-81.026943'
                     },
                     {
                         svgPath: targetSVG,
-                        title: 'Central America to US\n5 missing or dead',
+                        title: 'Central America to US\n\r5 missing or dead',
                         latitude: '29.272748',
                         longitude: '-103.450158'
                     },
                     {
                         svgPath: targetSVG,
-                        title: 'Central Mediterranean\n13 010 missing or dead',
+                        title: 'Central Mediterranean\n\r13 010 missing or dead',
                         latitude: '35.491936',
                         longitude: '12.631581'
                     },
                     {
                         svgPath: targetSVG,
-                        title: 'Darien Gap\n27 missing or dead',
+                        title: 'Darien Gap\n\r27 missing or dead',
                         latitude: '8.241309',
                         longitude: '-78.002143'
                     },
                     {
                         svgPath: targetSVG,
-                        title: 'Dominican Republic to Puerto Rico\n13 missing or dead',
+                        title: 'Dominican Republic to Puerto Rico\n\r13 missing or dead',
                         latitude: '18.434013',
                         longitude: '-67.803684'
                     },
                     {
                         svgPath: targetSVG,
-                        title: 'From Haiti to Dajabon, Dominican Republic\n1 missing or dead',
+                        title: 'From Haiti to Dajabon, Dominican Republic\n\r1 missing or dead',
                         latitude: '19.545011',
                         longitude: ' -71.712446'
                     },
                     {
                         svgPath: targetSVG,
-                        title: 'Horn Africa to Yemen\n162 missing or dead',
+                        title: 'Horn Africa to Yemen\n\r162 missing or dead',
                         latitude: '12.380538',
                         longitude: '47.184514'
                     },
                     {
                         svgPath: targetSVG,
-                        title: 'Eastern Mediterranean\n1 355 missing or dead',
+                        title: 'Eastern Mediterranean\n\r1 355 missing or dead',
                         latitude: '41.026918',
                         longitude: '29.001027'
                     },
                     {
                         svgPath: targetSVG,
-                        title: 'Italy to France\n5 missing or dead',
+                        title: 'Italy to France\n\r5 missing or dead',
                         latitude: '43.785800',
                         longitude: '7.529638'
                     },
                     {
                         svgPath: targetSVG,
-                        title: 'Malaysia to Indonesia\n13 missing or dead',
+                        title: 'Malaysia to Indonesia\n\r13 missing or dead',
                         latitude: '2.055232',
                         longitude: '101.981302'
                     },
                     {
                         svgPath: targetSVG,
-                        title: 'Venezuela to Cura\xed_ao\n5 missing or dead',
+                        title: 'Venezuela to Curaçao\n\r5 missing or dead',
                         latitude: '11.969524',
                         longitude: '-69.169640'
                     },
                     {
                         svgPath: targetSVG,
-                        title: 'Western African\n114 missing or dead',
+                        title: 'Western African\n\r114 missing or dead',
                         latitude: '16.712979',
                         longitude: '-11.872593',
                     },
                     {
                         svgPath: targetSVG,
-                        title: 'Western Mediterranean\n439 missing or dead',
+                        title: 'Western Mediterranean\n\r439 missing or dead',
                         latitude: '35.955730',
                         longitude: '-5.501304'
                     },
                     {
                         svgPath: targetSVG,
-                        title: 'Western Balkans\n71 missing or dead',
+                        title: 'Western Balkans\n\r71 missing or dead',
                         latitude: '43.280480',
                         longitude: '19.176704'
                     }
