--- a/public/index.html
+++ b/public/index.html
@@ -494,16 +494,17 @@
 
 
                 var dataProvider = {
-                    mapVar: AmCharts.maps.worldLow
+                    mapVar: AmCharts.maps.worldLow,
+                    borderColor: '#000000'
                 };
 
                 map.areasSettings = {
-                    unlistedAreasColor: "#181661"
+                    unlistedAreasColor: "#dfdfdf"
                 };
 
                 map.imagesSettings = {
-                    color: "#c51d35",
-                    rollOverColor: "#550000",
+                    color: "#bd6975",
+                    rollOverColor: "#c50021",
                     selectedColor: "#000000"
                 };
 
@@ -511,6 +512,7 @@
                     color: "#CC0000",
                     alpha: 0.4
                 };
+
 
 
 
