--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <script src="js/utils.js"></script>
 
     <link rel="stylesheet" href="css/ammap.css" type="text/css">
-    <script src="js/ammap.js" type="text/javascript"></script>
+    <script src="js/ammap2.js" type="text/javascript"></script>
     <script src="js/worldLow.js" type="text/javascript"></script>
 
     <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
