--- a/public/index.html
+++ b/public/index.html
@@ -165,6 +165,7 @@
             background:rgba(51,51,51,0.75);
             text-align:center;
             position: absolute;
+            font-size: 20%;
             width: 100%;
             left: 0;
             top: 10%;
@@ -233,7 +234,7 @@
                 lockAnchors: false,
                 navigation: true,
                 navigationTooltips: ['Title', 'Family Journey','Migration', '', 'Mediterranean', 'Graph', 'Centrale Route Boat',
-                    'Easter Route Truck', 'Maps', 'History', 'Lampelousa', 'Datas', 'Goals', 'Thanks'],
+                    'Easter Route Truck', 'Maps', 'History', 'Lampedusa', 'Datas', 'Goals', 'Thanks'],
                 showActiveTooltip: false,
 
 
@@ -383,6 +384,16 @@
                             67, 336, 53, 1208, 95, 5, 206, 652, 76, 163, 8, 8,
                             90, 7, 258, 611, 1130, 388, 208, 40, 53, 431, 703, 374,
                             225, 217, 290, 279, 611, 537, 68, 143, 102, 160, 118]
+                    },
+                    {
+                        label: 'Easter and Western route',
+                        backgroundColor: color(window.chartColors.black).alpha(0).rgbString(),
+                        borderColor: window.chartColors.red,
+                        borderWidth: 1,
+                        data: [15, 9, 0, 0, 4, 25, 0, 0, 8, 4, 41, 15, 9, 8, 14,
+                            1, 28, 24, 47, 193, 258, 99, 209, 280, 48, 66, 19,
+                            48, 1, 18, 22, 27, 6, 15, 12, 29, 14, 18, 33,
+                            2, 10, 64, 8, 6, 8, 17]
                     }]
 
             };
@@ -405,7 +416,13 @@
                     backgroundColor: color("#ffffff").alpha(0).rgbString(),
                     borderColor: color("#c50021").alpha(1).rgbString(),
                     borderWidth: 2,
-                    data: [0]}
+                    data: [0] }, {
+                    label: 'Easter and Western route',
+                    backgroundColor: color("#ffffff").alpha(0).rgbString(),
+                    borderColor: color("#c57800").alpha(1).rgbString(),
+                    borderWidth: 2,
+                    data: [12]}
+
                 ]
 
             };
@@ -461,6 +478,7 @@
                 if ((dataArray.datasets[0].data.length>0) & (window.location.hash==="#5") ){
                     barChartData.datasets[0].data.push(dataArray.datasets[0].data.shift());
                     barChartData.datasets[1].data.push(dataArray.datasets[1].data.shift());
+                    barChartData.datasets[2].data.push(dataArray.datasets[2].data.shift());
                     window.myBar.update();
                 }
                 else if(!(dataArray.datasets[0].data.length>0)){
